// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio[Base] should render correctly  1`] = `
<div
  class="soui-radio soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="soui-radio-indicator-wrapper"
  >
    <span
      class="soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="soui-radio-desc"
  >
    Option
  </span>
</div>
`;

exports[`Radio[Base] should render correctly about block 1`] = `
<div
  class="soui-radio-group"
>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about button 1`] = `
<div
  class="soui-radio-group soui-radio-group-button soui-button-group"
  dir="ltr"
>
  <button
    class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked soui-button soui-button-primary soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about button outline 1`] = `
<div
  class="soui-radio-group soui-radio-group-button soui-button-group"
  dir="ltr"
>
  <button
    class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked soui-button soui-button-primary soui-button-button soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about cancel 1`] = `
<div
  class="soui-radio-group"
>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled 1`] = `
<div
  class="soui-radio-group"
>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-disabled soui-radio-wrapper-checked"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled func 1`] = `
<div
  class="soui-radio-group"
>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group 1`] = `
<div
  class="example-radio-group-0-myRadioGroup-0-2-1 soui-radio-group"
>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group children 1`] = `
<div
  class="example-radio-group-1-myRadioGroup-0-2-2 soui-radio-group"
>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="soui-radio soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="soui-radio-indicator-wrapper"
    >
      <span
        class="soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about size 1`] = `
<div>
  <div
    class="soui-radio-group soui-radio-group-button soui-button-group"
    dir="ltr"
  >
    <button
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked soui-radio-wrapper-small soui-button soui-button-primary soui-button-button soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-small soui-button soui-button-secondary soui-button-button soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-small soui-button soui-button-secondary soui-button-button soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="soui-radio-group soui-radio-group-button soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked soui-button soui-button-primary soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="soui-radio soui-radio-wrapper soui-button soui-button-secondary soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="soui-radio-group soui-radio-group-button soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked soui-radio-wrapper-large soui-button soui-button-primary soui-button-button soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-large soui-button soui-button-secondary soui-button-button soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-large soui-button soui-button-secondary soui-button-button soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
</div>
`;

exports[`Radio[Base] should render correctly about status 1`] = `
<div
  class="soui-radio soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="soui-radio-indicator-wrapper"
  >
    <span
      class="soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="soui-radio-desc"
  >
    OptionA
  </span>
</div>
`;
